backend/src/modules/pega/expression/generated/PegaExprParser.ts
// Generated from C:/projects/kiro/SDLC-Agents-4-Enterprise/backend/src/modules/pega/expression/grammar/PegaExpr.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import PegaExprListener from "./PegaExprListener.js";
import PegaExprVisitor from "./PegaExprVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class PegaExprParser extends Parser {
	public static readonly TRUE = 1;
	public static readonly FALSE = 2;
	public static readonly LE = 3;
	public static readonly GE = 4;
	public static readonly EQ = 5;
	public static readonly NE = 6;
	public static readonly NE2 = 7;
	public static readonly LIKE = 8;
	public static readonly FUZZY = 9;
	public static readonly AND = 10;
	public static readonly OR = 11;
	public static readonly LPAREN = 12;
	public static readonly RPAREN = 13;
	public static readonly LBRACK = 14;
	public static readonly RBRACK = 15;
	public static readonly PEGA_AND = 16;
	public static readonly PEGA_OR = 17;
	public static readonly PEGA_NOT = 18;
	public static readonly PEGA_ISNULL = 19;
	public static readonly DOT = 20;
	public static readonly COMMA = 21;
	public static readonly AT = 22;
	public static readonly COLON = 23;
	public static readonly LT = 24;
	public static readonly GT = 25;
	public static readonly ASGN_EQ = 26;
	public static readonly NOT = 27;
	public static readonly QUESTION = 28;
	public static readonly PLUS = 29;
	public static readonly MINUS = 30;
	public static readonly STAR = 31;
	public static readonly SLASH = 32;
	public static readonly PERCENT = 33;
	public static readonly ANGLE = 34;
	public static readonly PLACEHOLDER = 35;
	public static readonly STRING = 36;
	public static readonly CHAR = 37;
	public static readonly ID = 38;
	public static readonly DOUBLE = 39;
	public static readonly LONG = 40;
	public static readonly INT = 41;
	public static readonly WS = 42;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_exprEntry = 0;
	public static readonly RULE_expr = 1;
	public static readonly RULE_exprList = 2;
	public static readonly RULE_function = 3;
	public static readonly RULE_rulesetIdent = 4;
	public static readonly RULE_reference = 5;
	public static readonly RULE_paramPage = 6;
	public static readonly RULE_keyedParam = 7;
	public static readonly RULE_segment = 8;
	public static readonly RULE_selector = 9;
	public static readonly RULE_constant = 10;
	public static readonly literalNames: (string | null)[] = [ null, "'true'", 
                                                            "'false'", "'<='", 
                                                            "'>='", "'=='", 
                                                            "'!='", "'<>'", 
                                                            "'^='", "'~='", 
                                                            "'&&'", "'||'", 
                                                            "'('", "')'", 
                                                            "'['", "']'", 
                                                            "'.AND.'", "'.OR.'", 
                                                            "'.NOT.'", "'.ISNULL'", 
                                                            "'.'", "','", 
                                                            "'@'", "':'", 
                                                            "'<'", "'>'", 
                                                            "'='", "'!'", 
                                                            "'?'", "'+'", 
                                                            "'-'", "'*'", 
                                                            "'/'", "'%'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "TRUE", 
                                                             "FALSE", "LE", 
                                                             "GE", "EQ", 
                                                             "NE", "NE2", 
                                                             "LIKE", "FUZZY", 
                                                             "AND", "OR", 
                                                             "LPAREN", "RPAREN", 
                                                             "LBRACK", "RBRACK", 
                                                             "PEGA_AND", 
                                                             "PEGA_OR", 
                                                             "PEGA_NOT", 
                                                             "PEGA_ISNULL", 
                                                             "DOT", "COMMA", 
                                                             "AT", "COLON", 
                                                             "LT", "GT", 
                                                             "ASGN_EQ", 
                                                             "NOT", "QUESTION", 
                                                             "PLUS", "MINUS", 
                                                             "STAR", "SLASH", 
                                                             "PERCENT", 
                                                             "ANGLE", "PLACEHOLDER", 
                                                             "STRING", "CHAR", 
                                                             "ID", "DOUBLE", 
                                                             "LONG", "INT", 
                                                             "WS" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"exprEntry", "expr", "exprList", "function", "rulesetIdent", "reference", 
		"paramPage", "keyedParam", "segment", "selector", "constant",
	];
	public get grammarFileName(): string { return "PegaExpr.g4"; }
	public get literalNames(): (string | null)[] { return PegaExprParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return PegaExprParser.symbolicNames; }
	public get ruleNames(): string[] { return PegaExprParser.ruleNames; }
	public get serializedATN(): number[] { return PegaExprParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, PegaExprParser._ATN, PegaExprParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public exprEntry(): ExprEntryContext {
		let localctx: ExprEntryContext = new ExprEntryContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, PegaExprParser.RULE_exprEntry);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 22;
			this.expr(0);
			this.state = 23;
			this.match(PegaExprParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public expr(): ExprContext;
	public expr(_p: number): ExprContext;
	// @RuleVersion(0)
	public expr(_p?: number): ExprContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: ExprContext = new ExprContext(this, this._ctx, _parentState);
		let _prevctx: ExprContext = localctx;
		let _startState: number = 2;
		this.enterRecursionRule(localctx, 2, PegaExprParser.RULE_expr, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 36;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 0, this._ctx) ) {
			case 1:
				{
				localctx = new FuncExprContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;

				this.state = 26;
				this.function_();
				}
				break;
			case 2:
				{
				localctx = new RefExprContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 27;
				this.reference();
				}
				break;
			case 3:
				{
				localctx = new ConstExprContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 28;
				this.constant();
				}
				break;
			case 4:
				{
				localctx = new ParenExprContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 29;
				this.match(PegaExprParser.LPAREN);
				this.state = 30;
				this.expr(0);
				this.state = 31;
				this.match(PegaExprParser.RPAREN);
				}
				break;
			case 5:
				{
				localctx = new PlaceholderExprContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 33;
				this.match(PegaExprParser.PLACEHOLDER);
				}
				break;
			case 6:
				{
				localctx = new UnaryExprContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 34;
				(localctx as UnaryExprContext)._op = this._input.LT(1);
				_la = this._input.LA(1);
				if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 1812725760) !== 0))) {
				    (localctx as UnaryExprContext)._op = this._errHandler.recoverInline(this);
				}
				else {
					this._errHandler.reportMatch(this);
				    this.consume();
				}
				this.state = 35;
				this.expr(8);
				}
				break;
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 64;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 2, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					this.state = 62;
					this._errHandler.sync(this);
					switch ( this._interp.adaptivePredict(this._input, 1, this._ctx) ) {
					case 1:
						{
						localctx = new MulExprContext(this, new ExprContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, PegaExprParser.RULE_expr);
						this.state = 38;
						if (!(this.precpred(this._ctx, 7))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 7)");
						}
						this.state = 39;
						(localctx as MulExprContext)._op = this._input.LT(1);
						_la = this._input.LA(1);
						if(!(((((_la - 31)) & ~0x1F) === 0 && ((1 << (_la - 31)) & 7) !== 0))) {
						    (localctx as MulExprContext)._op = this._errHandler.recoverInline(this);
						}
						else {
							this._errHandler.reportMatch(this);
						    this.consume();
						}
						this.state = 40;
						this.expr(8);
						}
						break;
					case 2:
						{
						localctx = new AddExprContext(this, new ExprContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, PegaExprParser.RULE_expr);
						this.state = 41;
						if (!(this.precpred(this._ctx, 6))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 6)");
						}
						this.state = 42;
						(localctx as AddExprContext)._op = this._input.LT(1);
						_la = this._input.LA(1);
						if(!(_la===29 || _la===30)) {
						    (localctx as AddExprContext)._op = this._errHandler.recoverInline(this);
						}
						else {
							this._errHandler.reportMatch(this);
						    this.consume();
						}
						this.state = 43;
						this.expr(7);
						}
						break;
					case 3:
						{
						localctx = new RelExprContext(this, new ExprContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, PegaExprParser.RULE_expr);
						this.state = 44;
						if (!(this.precpred(this._ctx, 5))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 5)");
						}
						this.state = 45;
						(localctx as RelExprContext)._op = this._input.LT(1);
						_la = this._input.LA(1);
						if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 50331672) !== 0))) {
						    (localctx as RelExprContext)._op = this._errHandler.recoverInline(this);
						}
						else {
							this._errHandler.reportMatch(this);
						    this.consume();
						}
						this.state = 46;
						this.expr(6);
						}
						break;
					case 4:
						{
						localctx = new EqExprContext(this, new ExprContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, PegaExprParser.RULE_expr);
						this.state = 47;
						if (!(this.precpred(this._ctx, 4))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 4)");
						}
						this.state = 48;
						(localctx as EqExprContext)._op = this._input.LT(1);
						_la = this._input.LA(1);
						if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 67109856) !== 0))) {
						    (localctx as EqExprContext)._op = this._errHandler.recoverInline(this);
						}
						else {
							this._errHandler.reportMatch(this);
						    this.consume();
						}
						this.state = 49;
						this.expr(5);
						}
						break;
					case 5:
						{
						localctx = new AndExprContext(this, new ExprContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, PegaExprParser.RULE_expr);
						this.state = 50;
						if (!(this.precpred(this._ctx, 3))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 3)");
						}
						this.state = 51;
						(localctx as AndExprContext)._op = this._input.LT(1);
						_la = this._input.LA(1);
						if(!(_la===10 || _la===16)) {
						    (localctx as AndExprContext)._op = this._errHandler.recoverInline(this);
						}
						else {
							this._errHandler.reportMatch(this);
						    this.consume();
						}
						this.state = 52;
						this.expr(4);
						}
						break;
					case 6:
						{
						localctx = new OrExprContext(this, new ExprContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, PegaExprParser.RULE_expr);
						this.state = 53;
						if (!(this.precpred(this._ctx, 2))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 2)");
						}
						this.state = 54;
						(localctx as OrExprContext)._op = this._input.LT(1);
						_la = this._input.LA(1);
						if(!(_la===11 || _la===17)) {
						    (localctx as OrExprContext)._op = this._errHandler.recoverInline(this);
						}
						else {
							this._errHandler.reportMatch(this);
						    this.consume();
						}
						this.state = 55;
						this.expr(3);
						}
						break;
					case 7:
						{
						localctx = new TernaryExprContext(this, new ExprContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, PegaExprParser.RULE_expr);
						this.state = 56;
						if (!(this.precpred(this._ctx, 1))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
						}
						this.state = 57;
						this.match(PegaExprParser.QUESTION);
						this.state = 58;
						this.expr(0);
						this.state = 59;
						this.match(PegaExprParser.COLON);
						this.state = 60;
						this.expr(1);
						}
						break;
					}
					}
				}
				this.state = 66;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 2, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}
	// @RuleVersion(0)
	public exprList(): ExprListContext {
		let localctx: ExprListContext = new ExprListContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, PegaExprParser.RULE_exprList);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 67;
			this.expr(0);
			this.state = 72;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===21) {
				{
				{
				this.state = 68;
				this.match(PegaExprParser.COMMA);
				this.state = 69;
				this.expr(0);
				}
				}
				this.state = 74;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public function_(): FunctionContext {
		let localctx: FunctionContext = new FunctionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, PegaExprParser.RULE_function);
		let _la: number;
		try {
			this.state = 105;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 7, this._ctx) ) {
			case 1:
				localctx = new QualifiedFuncContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 75;
				this.match(PegaExprParser.AT);
				this.state = 76;
				this.match(PegaExprParser.LPAREN);
				this.state = 77;
				this.rulesetIdent();
				this.state = 78;
				this.match(PegaExprParser.COLON);
				this.state = 79;
				(localctx as QualifiedFuncContext)._library = this.match(PegaExprParser.ID);
				this.state = 80;
				this.match(PegaExprParser.RPAREN);
				this.state = 81;
				this.match(PegaExprParser.DOT);
				this.state = 82;
				(localctx as QualifiedFuncContext)._fname = this.match(PegaExprParser.ID);
				this.state = 83;
				this.match(PegaExprParser.LPAREN);
				this.state = 85;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1817972742) !== 0) || ((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & 255) !== 0)) {
					{
					this.state = 84;
					this.exprList();
					}
				}

				this.state = 87;
				this.match(PegaExprParser.RPAREN);
				}
				break;
			case 2:
				localctx = new LibraryFuncContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 89;
				this.match(PegaExprParser.AT);
				this.state = 90;
				(localctx as LibraryFuncContext)._library = this.match(PegaExprParser.ID);
				this.state = 91;
				this.match(PegaExprParser.DOT);
				this.state = 92;
				(localctx as LibraryFuncContext)._fname = this.match(PegaExprParser.ID);
				this.state = 93;
				this.match(PegaExprParser.LPAREN);
				this.state = 95;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1817972742) !== 0) || ((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & 255) !== 0)) {
					{
					this.state = 94;
					this.exprList();
					}
				}

				this.state = 97;
				this.match(PegaExprParser.RPAREN);
				}
				break;
			case 3:
				localctx = new SimpleFuncContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 98;
				this.match(PegaExprParser.AT);
				this.state = 99;
				(localctx as SimpleFuncContext)._fname = this.match(PegaExprParser.ID);
				this.state = 100;
				this.match(PegaExprParser.LPAREN);
				this.state = 102;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1817972742) !== 0) || ((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & 255) !== 0)) {
					{
					this.state = 101;
					this.exprList();
					}
				}

				this.state = 104;
				this.match(PegaExprParser.RPAREN);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public rulesetIdent(): RulesetIdentContext {
		let localctx: RulesetIdentContext = new RulesetIdentContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, PegaExprParser.RULE_rulesetIdent);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 107;
			this.match(PegaExprParser.ID);
			this.state = 112;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===30) {
				{
				{
				this.state = 108;
				this.match(PegaExprParser.MINUS);
				this.state = 109;
				this.match(PegaExprParser.ID);
				}
				}
				this.state = 114;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public reference(): ReferenceContext {
		let localctx: ReferenceContext = new ReferenceContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, PegaExprParser.RULE_reference);
		try {
			let _alt: number;
			this.state = 140;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 13, this._ctx) ) {
			case 1:
				localctx = new CurrentRefContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 115;
				this.match(PegaExprParser.ANGLE);
				this.state = 117;
				this._errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						this.state = 116;
						this.segment();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					this.state = 119;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 9, this._ctx);
				} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
				}
				break;
			case 2:
				localctx = new ParamPageRefContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 121;
				this.paramPage();
				this.state = 125;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 10, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 122;
						this.segment();
						}
						}
					}
					this.state = 127;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 10, this._ctx);
				}
				}
				break;
			case 3:
				localctx = new PageRefContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 128;
				this.match(PegaExprParser.ID);
				this.state = 130;
				this._errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						this.state = 129;
						this.segment();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					this.state = 132;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 11, this._ctx);
				} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
				}
				break;
			case 4:
				localctx = new RelativeRefContext(this, localctx);
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 135;
				this._errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						this.state = 134;
						this.segment();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					this.state = 137;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 12, this._ctx);
				} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
				}
				break;
			case 5:
				localctx = new BareRefContext(this, localctx);
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 139;
				this.match(PegaExprParser.ID);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public paramPage(): ParamPageContext {
		let localctx: ParamPageContext = new ParamPageContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, PegaExprParser.RULE_paramPage);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 142;
			this.match(PegaExprParser.ID);
			this.state = 143;
			this.match(PegaExprParser.LBRACK);
			this.state = 144;
			this.keyedParam();
			this.state = 149;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===21) {
				{
				{
				this.state = 145;
				this.match(PegaExprParser.COMMA);
				this.state = 146;
				this.keyedParam();
				}
				}
				this.state = 151;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 152;
			this.match(PegaExprParser.RBRACK);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public keyedParam(): KeyedParamContext {
		let localctx: KeyedParamContext = new KeyedParamContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, PegaExprParser.RULE_keyedParam);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 154;
			this.match(PegaExprParser.ID);
			this.state = 155;
			this.match(PegaExprParser.COLON);
			this.state = 156;
			this.expr(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public segment(): SegmentContext {
		let localctx: SegmentContext = new SegmentContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, PegaExprParser.RULE_segment);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 158;
			this.match(PegaExprParser.DOT);
			this.state = 159;
			this.match(PegaExprParser.ID);
			this.state = 164;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 15, this._ctx) ) {
			case 1:
				{
				this.state = 160;
				this.match(PegaExprParser.LPAREN);
				this.state = 161;
				this.selector();
				this.state = 162;
				this.match(PegaExprParser.RPAREN);
				}
				break;
			}
			}
		}
		catch (re) {
